--- a/src/Components/Navbar/Popover/Mymodal.css
+++ b/src/Components/Navbar/Popover/Mymodal.css
@@ -10,12 +10,26 @@
 
 .modal-btn-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    /* margin: 10px 80px; */
 }
 
-.modal-btn {
+.modal-btn-container .modal-btn-sure {
     font-size: medium;
     font-weight: 600;
-    padding: 5px;
-    margin-left: 15px;
+    padding: 5px 20px;
+    /* margin-left: 15px; */
+    border: 1px solid black;
+    border-radius: 5px;
+    /* background: rgb(97, 145, 97); */
+}
+
+.modal-btn-container .modal-btn-cancle {
+    font-size: medium;
+    font-weight: 600;
+    padding: 5px 20px;
+    /* margin-left: 30px; */
+    border: 1px solid black;
+    border-radius: 5px;
+    /* background: rgb(205, 67, 67); */
 }
