--- a/src/Components/Navbar/Popover/Profile.css
+++ b/src/Components/Navbar/Popover/Profile.css
@@ -26,10 +26,11 @@
 
 .upc {
     width: 350px;
-    /* margin: 20px; */
+    margin: 20px -8px;
     border-radius: 4px;
-    padding-bottom: 20px;
+    /* padding-bottom: 10px; */
     background: white;
+    /* background-color: red; */
 }
 
 .gradiant {
